--- a/sites/templates/home.html
+++ b/sites/templates/home.html
@@ -11,9 +11,12 @@
                         <div class="text-center text-white bg-dark p-2 rounded  w-100">
                             <h1 class="mb-5">Bienvenue à la BiblioNanterre</h1>
                         </div>
-                            <p class="lead mb-5">Voulez-voir nos livres ?</p>
+                        <h4>
+                            <p class="lead mb-5">Accéder à nos livres </p>
                             <a href="{%url 'noslivres' %}" class="btn btn-primary" data-mdb-ripple-init>CLiquez ici</a>
+                        </h4>
                         </div>
+
                         </div>
                     </div>
                 </div>
@@ -46,7 +49,7 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h5 class="card-title">Vous voulez rajouter un livre ?</h5>
-                                <a href="{%url 'my_view' %}" class="btn btn-primary" data-mdb-ripple-init>CLiquez ici</a>
+                                <a href="{%url 'newlivre' %}" class="btn btn-primary" data-mdb-ripple-init>CLiquez ici</a>
                             </div>
                         </div>
                     </div>
