--- a/sites/templates/genre.html
+++ b/sites/templates/genre.html
@@ -5,11 +5,11 @@
         {%for categories in category %}
         <div class=" col-md-6 col-lg-3 col-xl-3">
         <div class="card">
-                <a href="{%url 'genre_category'  categories.name%}">
+                <a href="{%url 'genre_category'  categories.id%}">
                 </a>
                 <div class="card-body" style="height: 230px;">
-                        <h5 class="card-title"><a href="{%url 'genre_category'  categories.name %}">{{categories.name}}</a></h4>
-                        <a href="{%url 'genre_category'  categories.name %}" class="btn btn-primary" data-mdb-ripple-init>Boutton</a>
+                        <h5 class="card-title"><a href="{%url 'genre_category'  categories.id %}">{{categories.name}}</a></h4>
+                        <a href="{%url 'genre_category'  categories.id %}" class="btn btn-primary" data-mdb-ripple-init>cliquez-ici</a>
                 </div>
         </div>
 </div>
