--- a/sites/templates/noslivres.html
+++ b/sites/templates/noslivres.html
@@ -3,7 +3,6 @@
 
     <div class="container">
         <div class="row">
-          <h1>ushuhs</h1>
           {%for livres in liste_livres %}
           <div class=" col-md-6 col-lg-3 col-xl-3">
             <div class="card">
@@ -11,10 +10,9 @@
             <img src="{{livres.image.url}}" class="card-img-top">
           </a>
           <div class="card-body" style="height: 230px;">
-            <h5 class="card-title"><a href="{%url 'detail2' %}">{{livres.title}}</a></h4>
+            <h5 class="card-title"><a href="{%url 'home' %}">{{livres.title}}</a></h4>
               <p class="card-text">{{livres.desc|truncatewords:8}}</p>
-              <p class="card-text">{{livres.created_at|timesince}}</p>
-              <a href="{%url 'detail' livres.id %}" class="btn btn-primary" data-mdb-ripple-init>Boutton</a>
+              <a href="{%url 'detail' livres.id %}" class="btn btn-primary" data-mdb-ripple-init>cliquez-ici</a>
           </div>
         </div>
       </div>
